Added user entered links to be displayed on view with recycle ability

--- a/app/src/main/res/layout/activity_card_link.xml
+++ b/app/src/main/res/layout/activity_card_link.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp">
 
         <TextView
-            android:id="@+id/url"
+            android:id="@+id/urlInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="7dp"
